--- a/donate.html
+++ b/donate.html
@@ -105,7 +105,7 @@
            <input type="number" name="Contact No" id="Contact no">
           </div>
              <div class="gateway">
-              <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_HxpEZ1ZCNXyHEZ" async> </script> </form>
+              <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_I0sBGBWgpyWpD5" async> </script> </form>
           </div>
         </div>
           </form>
